--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kyle Gallery",
+  "name": "Kylewengphoto攝情",
   "short_name": "KylePhoto",
   "start_url": ".",
   "display": "standalone",
