--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Kylewengphoto攝情",
-  "short_name": "KylePhoto",
+  "short_name": "KyleWengPhoto",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#000000",
